# spider-rs

./: .gitignore  README.md
backend/: Cargo.toml  b.bat
backend/src/: crawler.rs  init.rs  lib.rs  rt.rs  task.rs
backend/src/scraper/: link.rs  mod.rs
backend/src/storage/: mod.rs  task.rs
common/: Cargo.toml
common/src/: lib.rs  page.rs  param.rs  result.rs  task.rs  util.rs
frontend/: Cargo.toml
