[package]
name = "spider-rs-common"
version = "0.1.0"
authors = ["Songday <songday@yeah.net>"]
edition = "2018"

[lib]
name = "spider_rs_common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
uuid = { version = "0.8", features = ["v5"] }
serde = "1.0"
#serde = { version = "1.0", features = ["derive"] } # features 相当于引入了`serde_derive`
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
